Update links to new Vercel deployment

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://tdansistod.github.io/Walter-Burgers/img/walter burgers.webp"
+      content="https://walter-burgers.vercel.app/img/walter burgers.webp"
     />
   </head>
   <body>
@@ -52,13 +52,13 @@
       <h1 class="brand">Walter Burgers</h1>
       <nav class="nav">
         <a
-          href="https://tdansistod.github.io/Walter-Burgers/"
+          href="https://walter-burgers.vercel.app/"
           id="home"
           class="navItem"
           >Home</a
         >
         <a
-          href="https://tdansistod.github.io/Walter-Burgers/about.html"
+          href="https://walter-burgers.vercel.app/about.html"
           id="about"
           class="navItem"
           >Sobre Nosotros</a
@@ -68,7 +68,7 @@
         <input type="checkbox" id="navButton" />
         <ul class="navMenu">
           <li>
-            <a href="https://tdansistod.github.io/Walter-Burgers/">
+            <a href="https://walter-burgers.vercel.app/">
               <img
                 src="./img/home icon.svg"
                 alt="home icon"
@@ -81,7 +81,7 @@
             </a>
           </li>
           <li>
-            <a href="https://tdansistod.github.io/Walter-Burgers/about.html">
+            <a href="https://walter-burgers.vercel.app/about.html">
               <img
                 src="./img/about icon.svg"
                 alt="about icon"
@@ -115,7 +115,7 @@
             class="link"
             target="_blank"
             rel="noreferrer"
-            href="https://tdansistod.github.io/Portfolio/"
+            href="https://westudio.vercel.app/"
             >portafolio</a
           >
           y descubrir cómo integro elementos de diseño, navegación y contenido
@@ -132,7 +132,7 @@
             class="link"
             target="_blank"
             rel="noreferrer"
-            href="https://tdansistod.github.io/Portfolio/"
+            href="https://westudio.vercel.app/"
             >Waltersdorf lautaro</a
           >
         </p>
